[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI/OfcInfoRT.gd" type="Script" id=1]
[ext_resource path="res://UI/AcademyRT.gd" type="Script" id=2]
[ext_resource path="res://UI/OfcFctyUI.gd" type="Script" id=3]
[ext_resource path="res://images/icon/icon_edit.png" type="Texture" id=4]

[node name="academy" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OfficerRT" type="RichTextLabel" parent="."]
margin_right = 254.0
margin_bottom = 600.0
size_flags_horizontal = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="edit" type="Button" parent="OfficerRT"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -30.0
margin_right = 36.0
icon = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AcademyRT" type="RichTextLabel" parent="."]
margin_left = 258.0
margin_right = 766.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
bbcode_enabled = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 770.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ItemList" type="ItemList" parent="VBoxContainer"]
margin_right = 254.0
margin_bottom = 578.0
size_flags_vertical = 3
items = [ "Engineer", null, false, "Physicist", null, false, "Tactical", null, false ]
fixed_icon_size = Vector2( 16, 16 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Training" type="Button" parent="VBoxContainer"]
margin_top = 582.0
margin_right = 254.0
margin_bottom = 600.0
text = "Training"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="OfficerRT/edit" to="." method="_on_edit_pressed"]
[connection signal="select" from="AcademyRT" to="." method="_on_AcademyRT_select"]
[connection signal="item_activated" from="VBoxContainer/ItemList" to="." method="_on_ItemList_item_activated"]
[connection signal="item_selected" from="VBoxContainer/ItemList" to="." method="_on_ItemList_item_selected"]
[connection signal="pressed" from="VBoxContainer/Training" to="." method="_on_Training_pressed"]
